006-03-02  Jakub Jelinek  <jakub@redhat.com>

	* elf/check-textrel.c: Include config.h.
	(AB(handle_file)): Don't fail if PF_X | PF_W on architectures known
	to have executable writable PLT.
	* sysdeps/powerpc/powerpc32/configure.in (HAVE_PPC_SECURE_PLT): New
	test.
	* config.h.in (HAVE_PPC_SECURE_PLT): Add.

	* malloc/malloc.c (MALLOC_ALIGNMENT): Set to __alignof__ (long double)
	if long double is more aligned than 2 * SIZE_SZ.
	(misaligned_chunk): Define.
	(public_rEALLOc, _int_free, _int_realloc): Use it.

2006-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #2013]
	* sysdeps/ia64/memccpy.S: Properly handle recovery for
	predicated speculative load.

2006-03-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Update.

	* sysdeps/unix/sysv/linux/i386/fxstatat.c (__fxstatat64): Use
	libc_hidden_ver rather than libc_hidden_def.

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Update.
	* sysdeps/sparc/fpu/fraiseexcpt.c (__feraiseexcept):
	Use inline asm to make sure the compiler doesn't optimize insns out.

	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h
	(DECLARGS_6): Fix a typo.

2006-03-01  Roland McGrath  <roland@redhat.com>

	* version.h (VERSION): 2.3.91

	* Makeconfig (sysdeps-srcdirs): New variable.
	(sysdeps-add-ons-srcdirs): Use it.
	* csu/Makefile (all-Banner-files): Use it.

	* Makefile (dist-selector): New variable.
	(glibc-%.tar rule): Use it.  Make $(dist-separate) tarballs
	contain one version-named directory.

	* Makefile (format-me): Use  --plaintext --no-number-sections.

	* NOTES, INSTALL: Regenerated.

	* NEWS: Update 2.4 items.

2006-03-01  David S. Miller  <davem@sunset.davemloft.net>

	* configure.in (machine): Match sparcv9v and sparc64v.
	* configure: Regenerated.
	* sysdeps/sparc/sparc32/sparcv9v/memcpy.S: New file.
	* sysdeps/sparc/sparc32/sparcv9v/memset.S: New file.
	* sysdeps/sparc/sparc64/sparcv9v/memcpy.S: New file.
	* sysdeps/sparc/sparc64/sparcv9v/memset.S: New file.
